Fix autostart in new version